# taskies

./: .clang-format  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  README.md  TODO.txt  Taskies.sln  Taskies.vcxproj  Taskies.vcxproj.filters  conandata.yml  taskies.toml
src/: CMakeLists.txt  application.cpp  application.h  application.manifest  main.cpp  resource.h  resources.rc
src/common/: CMakeLists.txt  common.cpp  common.h  constants.cpp  constants.h  enumclientdata.cpp  enumclientdata.h  enums.cpp  enums.h  logmessages.cpp  logmessages.h  queryhelper.cpp  queryhelper.h  usererrormessages.cpp  usererrormessages.h  validator.cpp  validator.h  version.h  wxcommon.cpp  wxcommon.h
src/common/messages/: CMakeLists.txt  configmessages.cpp  configmessages.h  operationmessages.cpp  operationmessages.h  persistencemessages.cpp  persistencemessages.h  sqlitemessages.cpp  sqlitemessages.h
src/common/results/: CMakeLists.txt  configresult.cpp  configresult.h  exportresult.cpp  exportresult.h  sqliteresult.cpp  sqliteresult.h
src/core/: CMakeLists.txt  configuration.cpp  configuration.h  database_backup.cpp  database_backup.h  database_backup_zip.cpp  database_backup_zip.h  database_migration.cpp  database_migration.h  database_optimizer.cpp  database_optimizer.h  environment.cpp  environment.h  translator.cpp  translator.h  zip_database_backup.cpp  zip_database_backup.h
src/dao/: categorydao.cpp  categorydao.h  clientdao.cpp  clientdao.h  employerdao.cpp  employerdao.h  exportdao.cpp  exportdao.h  projectdao.cpp  projectdao.h  taskdao.cpp  taskdao.h  workdaydao.cpp  workdaydao.h
src/data/: categorydata.cpp  categorydata.h  clientdata.cpp  clientdata.h  employerdata.cpp  employerdata.h  projectdata.cpp  projectdata.h
src/ipc/: CMakeLists.txt  applicationoptionsconnection.cpp  applicationoptionsconnection.h  server.cpp  server.h
src/models/: CMakeLists.txt  attendedmeetingmodel.cpp  attendedmeetingmodel.h  attributegroupmodel.cpp  attributegroupmodel.h  attributemodel.cpp  attributemodel.h  attributetypemodel.cpp  attributetypemodel.h  categorymodel.cpp  categorymodel.h  clientmodel.cpp  clientmodel.h  employermodel.cpp  employermodel.h  notificationmessagemodel.cpp  notificationmessagemodel.h  projectmodel.cpp  projectmodel.h  staticattributevaluemodel.cpp  staticattributevaluemodel.h  taskattributevaluemodel.cpp  taskattributevaluemodel.h  taskmodel.cpp  taskmodel.h  workdaymodel.cpp  workdaymodel.h
src/persistence/: CMakeLists.txt  attendedmeetingspersistence.cpp  attendedmeetingspersistence.h  attributegroupspersistence.cpp  attributegroupspersistence.h  attributespersistence.cpp  attributespersistence.h  attributetypespersistence.cpp  attributetypespersistence.h  categoriespersistence.cpp  categoriespersistence.h  categorypersistence.cpp  categorypersistence.h  clientpersistence.cpp  clientpersistence.h  clientspersistence.cpp  clientspersistence.h  employerpersistence.cpp  employerpersistence.h  employerspersistence.cpp  employerspersistence.h  exportpersistence.cpp  exportpersistence.h  projectpersistence.cpp  projectpersistence.h  projectspersistence.cpp  projectspersistence.h  staticattributevaluespersistence.cpp  staticattributevaluespersistence.h  taskattributevaluespersistence.cpp  taskattributevaluespersistence.h  taskpersistence.cpp  taskpersistence.h  taskspersistence.cpp  taskspersistence.h  workdaypersistence.cpp  workdaypersistence.h  workdayspersistence.cpp  workdayspersistence.h
src/persistence/base/: CMakeLists.txt  persistencebase.cpp  persistencebase.h
src/repository/: categoryrepository.cpp  categoryrepository.h  categoryrepositorymodel.cpp  categoryrepositorymodel.h  setupwizardrepository.cpp  setupwizardrepository.h  taskrepository.cpp  taskrepository.h  taskrepositorymodel.cpp  taskrepositorymodel.h
src/services/: CMakeLists.txt
src/services/attributes/: CMakeLists.txt  staticattributegroupsservice.cpp  staticattributegroupsservice.h  staticattributegroupviewmodel.cpp  staticattributegroupviewmodel.h
src/services/categories/: CMakeLists.txt  categoryservice.cpp  categoryservice.h  categoryviewmodel.cpp  categoryviewmodel.h
src/services/category/: categoryservice.cpp  categoryservice.h  categoryviewmodel.cpp
src/services/export/: CMakeLists.txt  availablecolumns.cpp  availablecolumns.h  columnexportmodel.cpp  columnexportmodel.h  columnjoinprojection.cpp  columnjoinprojection.h  columnprojection.cpp  columnprojection.h  csvexporter.cpp  csvexporter.h  csvexporterservice.cpp  csvexporterservice.h  csvexportmappedoptions.cpp  csvexportmappedoptions.h  csvexportoptions.cpp  csvexportoptions.h  csvexportprocessor.cpp  csvexportprocessor.h  csvmappedoptions.cpp  csvmappedoptions.h  data.cpp  data.h  dataexporter.cpp  dataexporter.h  dataexportgenerator.cpp  dataexportgenerator.h  datagenerator.cpp  datagenerator.h  excelexporterservice.cpp  excelexporterservice.h  excelexportprocessor.cpp  excelexportprocessor.h  excelexportservice.cpp  excelexportservice.h  excelguard.cpp  excelguard.h  excelinstancecheck.cpp  excelinstancecheck.h  excelservice.cpp  (+20 more)
src/services/filterentity/: CMakeLists.txt  filterentityservice.cpp  filterentityservice.h
src/services/integrations/: CMakeLists.txt  outlookguard.cpp  outlookguard.h  outlookintegratorservice.cpp  outlookintegratorservice.h  outlookmeetingmodel.cpp  outlookmeetingmodel.h
src/services/outlook/: CMakeLists.txt  outlookclassicservice.cpp  outlookclassicservice.h  outlookmeetingmodel.cpp  outlookmeetingmodel.h
src/services/setupwizard/: CMakeLists.txt  setupwizardservice.cpp  setupwizardservice.h
src/ui/: CMakeLists.txt  clientdata.cpp  clientdata.h  events.cpp  events.h  mainframe.cpp  mainframe.h  notificationclientdata.cpp  notificationclientdata.h  notificationpopupwindow.cpp  notificationpopupwindow.h  persistencemanager.cpp  persistencemanager.h  statusbar.cpp  statusbar.h  taskbaricon.cpp  taskbaricon.h  translator.cpp  translator.h
src/utils/: CMakeLists.txt  datestore.cpp  datestore.h  mswutils.cpp  mswutils.h  utils.cpp  utils.h
(+254 files in other folders)
